Updated project settings

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Aura Gold Biometrics",
+    "name": "Aura Gold AI Biometrics",
     "slug": "aura-gold-ai-biometrics",
     "version": "1.0.8",
     "orientation": "portrait",
