Update package name and version in package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "expo-app",
+  "name": "aura-gold-ai-biometrics",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "1.0.10",
   "scripts": {
     "start": "bunx rork start -p trof4u7elq7w3ojcnwk2e --tunnel",
     "start-web": "bunx rork start -p trof4u7elq7w3ojcnwk2e --web --tunnel",
     "start-web-dev": "DEBUG=expo* bunx rork start -p trof4u7elq7w3ojcnwk2e --web --tunnel",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "clear": "expo start -c"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
