--- a/app.json
+++ b/app.json
@@ -1,31 +1,82 @@
 {
   "expo": {
-    "name": "Aura Gold AI Biometrics",
-    "slug": "aura-gold-ai-biometrics",
-    "version": "1.0.10",
+    "name": "Aura Gold AI",
+    "slug": "aura-gold-ai-biometrics-clone",
+    "version": "1.0.11",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "rork-app",
+    "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
     "ios": {
-      "bundleIdentifier": "app.rork.aura-gold-ai-biometrics",
+      "supportsTablet": false,
+      "bundleIdentifier": "app.rork.aura-gold-ai-biometrics-clone",
       "infoPlist": {
-        "NSCameraUsageDescription": "Aura Gold requires camera access for real-time facial biometric analysis.",
-        "NSFaceIDUsageDescription": "Aura Gold uses Face ID to securely authenticate staff and protect patient PHI."
+        "NSCameraUsageDescription": "Allow $(PRODUCT_NAME) to access your camera",
+        "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to access your microphone",
+        "NSPhotoLibraryUsageDescription": "Allow $(PRODUCT_NAME) to access your photos",
+        "NSFaceIDUsageDescription": "Allow $(PRODUCT_NAME) to access your Face ID biometric data."
+      },
+      "config": {
+        "usesNonExemptEncryption": false
       }
     },
     "android": {
-      "package": "app.rork.aura_gold_ai_biometrics",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "package": "app.rork.aura_gold_ai_biometrics_clone",
       "permissions": [
         "CAMERA",
-        "INTERNET",
-        "USE_BIOMETRIC",
-        "USE_FINGERPRINT"
+        "RECORD_AUDIO",
+        "android.permission.VIBRATE",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "INTERNET"
       ]
     },
+    "web": {
+      "favicon": "./assets/images/favicon.png"
+    },
     "plugins": [
-      "expo-router",
-      ["expo-camera", { "cameraPermission": "Allow Aura Gold to use the camera." }],
-      ["expo-secure-store", { "faceIDPermission": "Allow Aura Gold to use FaceID." }]
-    ]
+      [
+        "expo-router",
+        {
+          "origin": "https://rork.com/"
+        }
+      ],
+      "expo-font",
+      "expo-web-browser",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ],
+      [
+        "expo-secure-store",
+        {
+          "configureAndroidBackup": true,
+          "faceIDPermission": "Allow $(PRODUCT_NAME) to access your Face ID biometric data."
+        }
+      ]
+    ],
+    "experiments": {
+      "typedRoutes": true
+    }
   }
 }
